# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "millimeter"
version = "0.1.0"
edition = "2021"

license = "0BSD"
description = "Primitive type with millimeter unit attached"
categories = ["mathematics", "science", "no-std"]
keywords = ["mm", "meter", "inch", "unit"]

repository = "https://github.com/kicad-rs/millimeter"
readme = "crates-io.md"
include = ["build.rs", "src/**/*", "crates-io.md", "LICENSE"]

[features]
default = ["std"]

# disable this feature to add support for no_std environments
std = ["serde/std", "thiserror"]

[dependencies]
paste = "1.0"
serde = { version = "1.0.132", default-features = false, optional = true }
thiserror = { version = "1.0", optional = true }

[build-dependencies]
rustc = { package = "version_check", version = "0.9.4" }
